--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@maptiler/sdk": "^2.4.2",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.6",
+    "mapbox-gl": "^3.8.0",
+    "maplibre-gl": "^4.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
